# goit-pythonweb-hw-12

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 39d38542f048_add_owner_id_to_contacts.py  3e2cf13095df_fix_user_table.py  47b2e1f4019f_add_avatar_url_to_users.py  d32036ba9f61_create_user_table.py  db71d1d0e397_init_tables.py  f9be4b182cc3_add_user_role_field.py
app/: config.py  database.py  main.py
app/api/: auth.py  contacts.py  users.py
app/crud/: contact.py  user.py
app/models/: __init__.py  base.py  contact.py  user.py
app/schemas/: __init__.py  contact.py  user.py
app/services/: auth.py  avatar.py  cache.py  email.py  limiter.py  password_reset.py  permissions.py
docs/source/: conf.py  modules.rst
tests/: conftest.py  db.py  test_init_db.py
tests/crud/: test_contact_crud.py  test_user_crud.py
tests/integration/: test_contacts.py
tests/integration_old_broken/: test_auth.py  test_contacts.py
tests/services/: test_auth.py  test_avatar.py  test_email.py  test_imports_coverage.py  test_limiter.py  test_password_reset.py  test_permissions.py
tests/utils/: test_password_hashing.py
